--- a/_config.yml
+++ b/_config.yml
@@ -78,4 +78,13 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  - type: git
+    repo: git@github.com:shangyu95/blog.git
+    branch: master
+  - type: git
+    repo: git@github.com:shangyu95/blog.git
+    branch: hexo
+    extend_dirs: /
+    ignore_hidden: false
+    ignore_pattern:
+      public: .
